kyma/templates/manifests/networking/peer-authentication.yaml
# PeerAuthentication for namespace-level PERMISSIVE mTLS
# This allows services with and without sidecars to communicate
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: sail-proxy
spec:
  mtls:
    mode: PERMISSIVE
